/** @page apreq_changes CHANGES
//! brief List of major changes.


@section v2_10 Changes with libapreq2-2.10 (under developement)

- Build [Randy Kobes]
  Add appropriate manifest command to embed manifest files on Win32 
  when using VC8

- C API [Andy Grundman, joes]
  Add missing bytes_read initializer to apreq_handle_custom().

- C API [suggested by Vinay Y S, tested by Steve Hay and Peter Walsham]
  For Win32, remove the
     flag |= APR_FILE_NOCLEANUP | APR_SHARELOCK;
  in apreq_file_cleanup, to avoid problems with file uploads.

@section v2_09 Changes with libapreq2-2.09 ()

- C API [joes]
  Fix leak associated to calling apreq_brigade_fwrite() on an upload
  brigade.

- Build [Philip M. Gollucci]
  SunOS (Solaris) 
  Users must use gmake not make for building.

- Build [Philip M. Gollucci]
  SunOS (Solaris)
  Code around bug in libtool (at least in 1.5.18, 1.5.20, 1.5.22)
  causing mod_apreq2 to be built instead of mod_apreq2.so

- C API [Philip M. Gollucci]
  Fix comparison signed vs unsigned comparison
  in apreq_fwritev() on SunOS/gcc where iovec.iov_len is a long.

- Build [Philip M. Gollucci]
  SunOS (Solaris)
  fix duplicate link error to libexpat.so -- by using the one from httpd
  exclusively now.

- Build [Philip M. Gollucci]
  code around |#_!!_#| autoconf 2.60 bug.


@section v2_08 Changes with libapreq2-2.08 (released August 8, 2006)

- Perl API [Randy Kobes]
  add APR_FILE_NOCLEANUP | APR_SHARELOCK to flags passed to
  apreq_file_mktemp() on Win32 in library/util.c, in order to 
  clean up occasional stray temp files left behind in the 
  Perl upload test (reported by Steve Hay)

- Build [Philip M. Gollucci, Bojan Smojver, joes]
  add -fno-strict-aliasing to all compiles on all systems
  https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=193740
  This fixes an infinite look split_on_bdry() of library/parser_multipart.c
  particularly on linux/gcc 4.x platforms.

- Perl Glue
  Fix "value computed not used" gcc 4.1.x compile errors
  